--- a/src/components/Overlays/Izakaya/Izakaya.module.css
+++ b/src/components/Overlays/Izakaya/Izakaya.module.css
@@ -1,8 +1,14 @@
 .info {
   position: absolute;
-  font-size: 28px;
-  bottom: 24px;
-  right: 24px;
-  color: white;
+  bottom: 36px;
+  right: 36px;
   z-index: 1;
+
+  font-size: 56px;
+  font-family: sans-serif;
+  font-weight: bold;
+
+  color: white;
+  -webkit-text-stroke: 2px black;
+  text-stroke: 2px black;
 }
