--- a/src/components/Overlays/SplashScoreboard/SplashScoreboard.module.css
+++ b/src/components/Overlays/SplashScoreboard/SplashScoreboard.module.css
@@ -1,5 +1,5 @@
 .background {
-  background-image: url(../../../assets/splash_scoreboard.png);
+  background-image: url(./splash_scoreboard.png);
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
