--- a/src/components/Overlays/SplashScoreboard/SplashScoreboard.module.css
+++ b/src/components/Overlays/SplashScoreboard/SplashScoreboard.module.css
@@ -1,6 +1,55 @@
 .background {
   background-image: url(./splash_scoreboard.png);
+  background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
+}
+.alphaName {
+  width: 350px;
+  position: absolute;
+  top: 60px;
+  left: 10px;
+  z-index: 1;
+}
+.bravoName {
+  width: 350px;
+  position: absolute;
+  top: 60px;
+  left: 1570px;
+  z-index: 1;
+}
+.alphaScore {
+  position: absolute;
+  top: 48px;
+  left: 388px;
+  z-index: 1;
+}
+.bravoScore {
+  position: absolute;
+  top: 48px;
+  left: 1508px;
+  z-index: 1;
+}
+.teamName {
+  font-size: 35px;
+  font-family: sans-serif;
+  font-weight: bold;
+
+  color: white;
+  -webkit-text-stroke: 2px black;
+  text-stroke: 2px black;
+
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.score {
+  font-size: 48px;
+  font-family: sans-serif;
+  font-weight: bold;
+
+  color: white;
+  -webkit-text-stroke: 2px black;
+  text-stroke: 2px black;
 }
